2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Fixed up invitations so you can almost accept
	  them

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/GroupWindow.cs: Removed unimplemented groups and added Add
	  Person functionality
	* Banter/HIGMessageDialog.cs: Fixed up to have a window title

2007-08-03  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/PersonCard.cs: added methods to authorize a user

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Updated personcard to have a little more
	  indication of presence and bling
	* Banter/PersonView.cs: Removed "Me" from the view

2007-08-03  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/PersonCard.cs: Added code to support Invitation and
	  Authorization

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* data/sounds/notify.wav: Updated with a matching sound
	* data/sounds/send.wav, data/sounds/Makefile.am,
	  data/sounds/receive.wav, Banter/ChatWindow.cs: Added a send and
	  receive sound

2007-08-02  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs, Banter/GroupWindow.cs,
	  Banter/ProviderUserManager.cs, Banter/ProviderUser.cs: Added code
	  to support Invitation and Authorization

2007-08-01  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Fixed up audio button
	* Banter/PersonManager.cs: Removed status sort for now, race condition
	  is messing it up

2007-08-01  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Conversation.cs: bug in requesting both audio and video stream
	  in SetupAudioVideoStream

2007-08-01  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Updated card to allow blank cards to be created
	  and set the Person later
	* Banter/PersonManager.cs: Added sorting to model
	* Banter/PersonView.cs: added updated model

2007-08-01  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/NotificationManager.cs: removed VideoDown event