@@ -1,5 +1,10 @@
 2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* Banter/PersonCard.cs: Added new Add/Remove buttons for people
+	  requesting authorization
+
+2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* Banter/PersonCard.cs: Fixed up invitations so you can almost accept
 	  them
 
